// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiAvatar allows a name composed entirely of whitespace 1`] = `
<div
  aria-label="aria-label"
  class="euiAvatar euiAvatar--m euiAvatar--user testClass1 testClass2 emotion-euiAvatar-m-user"
  data-test-subj="test subject string"
  role="img"
  style="background-color:#ee789d;color:#000000"
  title="  "
>
  <span
    aria-hidden="true"
  >
      
  </span>
</div>
`;

exports[`EuiAvatar is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiAvatar euiAvatar--m euiAvatar--user testClass1 testClass2 emotion-euiAvatar-m-user"
  data-test-subj="test subject string"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as null is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user"
  role="img"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as plain is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user-plain"
  role="img"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as string is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user"
  role="img"
  style="background-color:#000;color:#FFFFFF"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as subdued is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user-subdued"
  role="img"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props iconType and iconColor as null is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="bolt"
  />
</div>
`;

exports[`EuiAvatar props iconType and iconColor is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    class="euiAvatar__icon"
    color="primary"
    data-euiicon-type="bolt"
  />
</div>
`;

exports[`EuiAvatar props iconType and iconSize is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    class="euiAvatar__icon"
    color="#000000"
    data-euiicon-type="bolt"
  />
</div>
`;

exports[`EuiAvatar props iconType is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    class="euiAvatar__icon"
    color="#000000"
    data-euiicon-type="bolt"
  />
</div>
`;

exports[`EuiAvatar props imageUrl is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000;background-image:url(image url)"
  title="name"
/>
`;

exports[`EuiAvatar props initials is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    lo
  </span>
</div>
`;

exports[`EuiAvatar props initialsLength is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    na
  </span>
</div>
`;

exports[`EuiAvatar props isDisabled is rendered 1`] = `
<div
  class="euiAvatar euiAvatar--m euiAvatar--user euiAvatar-isDisabled emotion-euiAvatar-m-user-isDisabled"
  role="presentation"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size l is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--l euiAvatar--user emotion-euiAvatar-l-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size m is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-m-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size s is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--s euiAvatar--user emotion-euiAvatar-s-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size xl is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--xl euiAvatar--user emotion-euiAvatar-xl-user"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props type is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--space emotion-euiAvatar-m-space"
  role="img"
  style="background-color:#e4a6c7;color:#000000"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar should throw error if color is not a hex 1`] = `"EuiAvatar needs to pass a valid color. This can either be a three or six character hex value"`;
